prevent selecting proxy blocks when initially not visible

--- a/css/partials/ProxyField.css
+++ b/css/partials/ProxyField.css
@@ -4,10 +4,10 @@
 
   @apply transition-opacity duration-100;
 
-  @apply opacity-0;
+  @apply opacity-0 pointer-events-none;
 
   &.bk-is-visible {
-    @apply opacity-100;
+    @apply opacity-100 pointer-events-auto;
   }
 
   .bk-field-list-proxy {
